assets/css/style.css
body {
    font-family: 'Anton', sans-serif;
    overflow: hidden;
}

#role {
  font-size: 38px;
  color: lightcyan;
  text-align: center;
  padding-right: 70px;
}

h1 {
    font-size: 70px;
    text-align:  center;
}

h2 {
    font-size: 50px;
}

aside {

    background: white;
    position: absolute;
    height: 100%;
    width: 200px;
    right: 0;
}

#wrapper {
    height: 166px;
    overflow: auto;
}


.jumbotron {background: #0000008c;}


.color-text {
    color: wheat;
}

.container{
	text-align: center;
}


.table {
  background: white;
}

.invisible {
    opacity: 0;
}

#menu-toggle {
  font-size: 20px;
}

#sidebar-wrapper {
  background-color: #daa520f2;
  font-size: 43px;
}
#sidebar-wrapper li {
  padding: 10px;
}

.sidebar-nav li a {
  color: lightcyan;
}

.contact-label{
    display: block;
    margin: 1em 1em .25em 1em;
    padding: 0 0 0 0em;
    color: #aaa;

}

.contact-input[type="submit"]{
    display: block;
    margin: 1em 0em;
    font-size: 16px;
    padding: .5em;
    background: #d73;
    color: #fff;
    border: none;


}

.contact-input[type="text"], textarea{
    display: block;
    margin: 0 0;
    width: 25em;
    font-size: 16px;
    padding: .5em;


}

#contact {
    padding: 1em;
}

#contact .contact-label {
    position: relative;
}

#picture{
}

#contact-box{
  color: Black;
}


#about {
    color:wheat;
    padding: .30em 0 .75em 0;
    text-align: center;
}

#about #contact-box{
    background-color:#eee;
    display: inline-block;
    padding: 2em 2em 0em;
    border-radius: 10%;
    position: relative;
}

@keyframes example {
  0% {background-color:gray;}
  25% {background-color: goldenrod;}
  50% {background-color: black;}
  100% {background-color:gray;}
}
#menu-toggle {
    background-color: lightgray;
    animation-name: example;
    animation-duration: 4s;
    animation-direction: alternate;
    animation-iteration-count: infinite;
}

#menu-toggle:after {
    color: white;
}

#role {
  background-color: lightcyan;
  animation-name: example;
  animation-duration: 4s;
  height: auto;
  animation-direction: alternate;
  animation-iteration-count: infinite;
  border-bottom: solid 2px #0000008c;
  background-color: white;
}

/*jquery element styles*/

.mob-button {
    font-size: 40px;
}

.search-result-div {
    background: #daa521d6;
    border: solid 2px black;
    font-size: 22px;
    color: #404040;
}

#search-form {
    background: #daa521d6;
    border: solid 2px black;
    font-size: 22px;
    color: #404040;
}

.r-link:active {

}

.r-link:link {
    color: inherit;
}

.r-link:hover {
    font-weight: bold;
    border: none;
    text-underline: none;
}

.r-link:visited {
    color: inherit;
}

